# fastapi

./: data.txt  pyproject.toml
api/: __init__.py  main.py
api/routers/: sample.py
